--- a/settings.json
+++ b/settings.json
@@ -1,18 +1,19 @@
 {
     "workbench.colorTheme": "GitHub Dark Default",
     "git.ignoreMissingGitWarning": true,
-    "editor.minimap.enabled": false,
     "editor.smoothScrolling": true,
     "security.workspace.trust.untrustedFiles": "open",
     "explorer.confirmDragAndDrop": false,
     "explorer.sortOrder": "modified",
     "workbench.sideBar.location": "right",
     "editor.fontSize": 16,
+    "editor.rulers": [80],
     "terminal.integrated.fontSize": 16,
     "workbench.colorCustomizations": {
         "terminal.background": "#13121A",
         "terminal.foreground": "#D3D7CF",
-        "terminalCursor.background": "#585858"
+        "terminalCursor.background": "#585858",
+        "editorRuler.foreground": "#2a2a2a"
     },
     "colorize.include": [
         "**/*.html",
@@ -23,4 +24,5 @@
         "**/*.less",
         "**/*.styl"
     ],
+    "editor.minimap.enabled": false,
 }
